# advent-of-code-2022

./: README.md  aoc  pyproject.toml
_template/: solution.py  tests.py
aoc_2022/: __init__.py
aoc_2022/day01/: solution.py  tests.py
aoc_2022/day02/: solution.py  tests.py
aoc_2022/day03/: solution.py
aoc_2022/day04/: solution.py  tests.py
aoc_2022/day05/: solution.py  tests.py
aoc_2022/day06/: solution.py  tests.py
aoc_2022/day07/: solution.py  tests.py
aoc_2022/day08/: solution.py  tests.py
aoc_2022/day09/: solution.py  tests.py
aoc_2022/day10/: solution.py  tests.py
aoc_2022/day11/: solution.py  tests.py
aoc_2022/day12/: solution.py  tests.py
aoc_2022/day13/: solution.py  tests.py
aoc_2022/day14/: solution.py  tests.py
aoc_2022/day15/: solution.py  tests.py
aoc_2022/day16/: solution.py  tests.py
aoc_2022/day17/: solution.py  tests.py
aoc_2022/day18/: solution.py  tests.py
aoc_2022/day19/: solution.py  tests.py
aoc_2022/day20/: solution.py  tests.py
aoc_2022/day21/: solution.py  tests.py
aoc_2022/day22/: solution.py  tests.py
aoc_2022/day23/: solution.py  tests.py
aoc_2022/day24/: solution.py  tests.py
aoc_2022/day25/: solution.py  tests.py
extras/day01/c/: Makefile  solution.c
extras/day02/c/: Makefile  solution.c
extras/day02/golf/: solution.py
extras/day03/: generator.py
extras/day08/: generator.py
extras/day08/python_optimized/: solution.py
extras/day11/python/: solution.py
scripts/: aoc.py
