[tool.poetry]
authors = ["Arjan de Pooter <mail@arjandepooter.nl>"]
description = ""
name = "advent-of-code-2022"
packages = [{include = "scripts"}, {include = "aoc_2022"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.11"
requests = "^2.28.1"
rich = "^12.6.0"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"
isort = "^5.10.1"
pytest = "^7.2.0"

[tool.poetry.scripts]
aoc = "scripts.aoc:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
